--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,4 @@ install:
   - make install
 
 script:
-  - go test -v -cover -coverprofile=coverage.txt
-
-after_success:
-  - bash <(curl -s https://codecov.io/bash) -f coverage.txt
+  - make test
