--- a/glide.yaml
+++ b/glide.yaml
@@ -1,12 +1,14 @@
 package: github.com/appleboy/gin-jwt
 import:
-- package: github.com/fvbock/endless
-- package: github.com/gin-gonic/gin
 - package: gopkg.in/dgrijalva/jwt-go.v3
-- package: gopkg.in/appleboy/gin-jwt.v2
+  version: ^3.0.0
+- package: gopkg.in/gin-gonic/gin.v1
+  version: ^1.1.4
 testImport:
 - package: github.com/buger/jsonparser
 - package: github.com/stretchr/testify
+  version: ^1.1.4
   subpackages:
   - assert
 - package: gopkg.in/appleboy/gofight.v1
+  version: ^2.0.0
