--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,16 @@
+workspace:
+  base: /go/src
+  path: github.com/appleboy/gin-jwt
+
 pipeline:
   build:
     image: appleboy/golang-testing:${GO_VERSION}
     environment:
       - GOPATH=/go
+      - CODECOV_TOKEN=${CODECOV_TOKEN}
     commands:
       - make install
+      - make embedmd
       - make vet
       - make lint
       - coverage all
@@ -14,11 +20,10 @@ pipeline:
     image: appleboy/drone-facebook
     pull: true
     to: 1234973386524610
+    fb_page_token: ${FB_PAGE_TOKEN}
+    fb_verify_token: ${FB_VERIFY_TOKEN}
     when:
       status: [ success, failure ]
-
-workspace:
-  path: /go/src/github.com/appleboy/gin-jwt
 
 matrix:
   GO_VERSION:
