--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,14 @@
 workspace:
-  base: /go/src
-  path: github.com/appleboy/gin-jwt
+  base: /srv/app
+  path: src/github.com/appleboy/gin-jwt
 
 pipeline:
   build:
     image: appleboy/golang-testing:${GO_VERSION}
+    secrets: [ codecov_token ]
     environment:
-      - GOPATH=/go
-      - CODECOV_TOKEN=${CODECOV_TOKEN}
+      - GOPATH=/srv/app
+      - PATH=$${PATH}:/srv/app/bin
     commands:
       - make install
       - make embedmd
@@ -20,8 +21,7 @@ pipeline:
     image: appleboy/drone-facebook
     pull: true
     to: 1234973386524610
-    fb_page_token: ${FB_PAGE_TOKEN}
-    fb_verify_token: ${FB_VERIFY_TOKEN}
+    secrets: [ fb_page_token, fb_verify_token ]
     when:
       status: [ success, failure ]
 
@@ -29,4 +29,4 @@ matrix:
   GO_VERSION:
     - 1.6.4
     - 1.7.5
-    - 1.8.0
+    - 1.8.3
