--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,17 +17,17 @@ jobs:
         with:
           go-version: '^1.16'
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
-          version: v1.43.0
+          version: v1.49.0
           args: --verbose
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        go: [1.16, 1.17]
+        os: [ubuntu-latest]
+        go: [1.16, 1.17, 1.18, 1.19]
         include:
           - os: ubuntu-latest
             go-build: ~/.cache/go-build
@@ -45,7 +45,7 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.ref }}
 
